--- a/plugin.xml
+++ b/plugin.xml
@@ -22,5 +22,18 @@ id="com.phonegap.plugins.localnotification"
         </config-file>
         
         <source-file src="src/android/LocalNotification.java" target-dir="src/com/phonegap/plugins/localnotification" />
+        
+        <source-file src="src/android/AlarmHelper.java"
+                target-dir="src/com/phonegap/plugins/localnotification" />
+                
+        <source-file src="src/android/AlarmOptions.java"
+                target-dir="src/com/phonegap/plugins/localnotification" />
+                
+        <source-file src="src/android/AlarmReceiver.java"
+                target-dir="src/com/phonegap/plugins/localnotification" />
+        
+        <source-file src="src/android/AlarmRestoreOnBoot.java"
+                target-dir="src/com/phonegap/plugins/localnotification" />
+                
      </platform>
 </plugin>
